# gnnmerge

./: .gitignore  pyproject.toml  requirements.txt
scripts/: analyze_models.py  gnnmerge-sweep-slurm.sh  gnnmerge-sweep.py  run_sweep.py  train-gnnmerge.sh  train-split-label.sh  train_in_domain.sh
src/: download_datasets_in_domain.py  gnnmerge.py  gnnmerge_partition.py  invertible_merge.py  models.py  permutation_merge.py  task_evaluation.py  train-split-labels.py  train_link_prediction.py  train_node_classification.py  utils.py
src/Cross-domain/: GNNMerge++.py  GNNMerge.py
src/Different_Tasks/: GNNMerge++.py  GNNMerge.py  train_lp_model.py
src/In-domain/: GNNMerge++.py  GNNMerge.py  models.py  train_labelsplits.py
