[project]
name = "gnnmerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.11",
    "clip==0.2.0",
    "dgl==2.1.0",
    "einops==0.8.0",
    "fvcore==0.1.5.post20221221",
    "importlib-resources==6.4.5",
    "matplotlib==3.7.5",
    "ogb==1.3.6",
    "pgb==0.0.1",
    "pot[backend-torch,gnn]>=0.9.6.post1",
    "rdkit==2024.3.5",
    "tensorboardx==2.6.2.2",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "wandb==0.19.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
pyg_lib = [
  { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-geometric-cu129", marker = "sys_platform == 'linux'" },
]
torch_cluster = [
  { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-geometric-cu129", marker = "sys_platform == 'linux'" },
]
torch_scatter = [
  { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-geometric-cu129", marker = "sys_platform == 'linux'" },
]
torch_sparse = [
  { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-geometric-cu129", marker = "sys_platform == 'linux'" },
]
torch_spline_conv = [
  { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-geometric-cu129", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-geometric-cpu"
url = "https://data.pyg.org/whl/torch-2.8.0+cpu.html"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "pytorch-geometric-cu129"
url = "https://data.pyg.org/whl/torch-2.8.0+cu129.html"
explicit = true
format = "flat"

[dependency-groups]
dev = [
    "ty>=0.0.6",
]
